# DGPO

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.claude/skills/deploy-experiment/: SKILL.md
.claude/skills/setup-environment/: SKILL.md
.claude/skills/validate/: SKILL.md
configs/: pretrain_nb101.yaml  pretrain_nb101_filtered.yaml  pretrain_nb201.yaml  pretrain_nb201_filtered.yaml  rlft_nb101.yaml  rlft_nb101_filtered.yaml  rlft_nb101_inverse.yaml  rlft_nb201_cifar10.yaml  rlft_nb201_cifar100.yaml  rlft_nb201_filtered.yaml  rlft_nb201_imagenet16.yaml  rlft_nb201_inverse.yaml
expected_outputs/: experiment_1_nb101.json  experiment_1_nb201.json  experiment_2_nb101.json  experiment_2_nb201.json
scripts/: build_nb201_cache.py  preflight.py  run_experiment_1_nb101.sh  run_experiment_1_nb201.sh  run_experiment_2_nb101.sh  run_experiment_2_nb201.sh  run_inverse_control.sh  setup.sh
src/: baselines.py  dataset.py  diffusion.py  evaluate.py  model.py  ops.py  rewards.py  train_pretrain.py  train_rlft.py  utils.py
